--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <ul class="portfolio-cart">
             <li class="portfolio-cart-item">
               <div class="portfolio-cart-img">
-                <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300" />
+                <img class="carts-img" src="./images/banking_app.jpg" alt="Banking App" width="360" height="300" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -276,7 +276,13 @@
             </li>
             <li class="portfolio-cart-item">
               <div class="portfolio-cart-img">
-                <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300" />
+                <img
+                  class="carts-img"
+                  src="./images/cashless_payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -289,7 +295,13 @@
             </li>
             <li class="portfolio-cart-item">
               <div class="portfolio-cart-img">
-                <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300" />
+                <img
+                  class="carts-img"
+                  src="./images/meditation_app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -302,7 +314,7 @@
             </li>
             <li class="portfolio-cart-item">
               <div class="portfolio-cart-img">
-                <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300" />
+                <img class="carts-img" src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -315,7 +327,13 @@
             </li>
             <li class="portfolio-cart-item">
               <div class="portfolio-cart-img">
-                <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
+                <img
+                  class="carts-img"
+                  src="./images/screen_illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -328,7 +346,13 @@
             </li>
             <li class="portfolio-cart-item">
               <div class="portfolio-cart-img">
-                <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300" />
+                <img
+                  class="carts-img"
+                  src="./images/online_courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
@@ -410,7 +434,7 @@
       </div>
     </footer>
     <!-- Backdrop & Modal Window -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button" aria-label="modal close button">
           <svg class="modal-close-btn-icon" width="8" height="8">
