--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <footer class="bg-dark-footer">
       <div class="container footer-row">
         <div class="foter-column-logo">
-          <a class="logo-footer" href="./index.html">Web<span class="logolight">Studio</span></a>
+          <a class="logo-footer" href="./index.html">Web<span class="logo-light">Studio</span></a>
           <p class="text-footer">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
           </p>
