Refactor CSS variables and improve modal and burger menu functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Web Sdudio</title>
+    <title>Web Studio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -21,7 +21,7 @@
     <header class="page-header">
       <div class="container row-header">
         <nav class="page-nav">
-          <a class="logo" href="./index.html"> Web<span class="logo_dark">Studio</span></a>
+          <a class="logo" href="./index.html"> Web<span class="logo-dark">Studio</span></a>
           <ul class="nav-header-list">
             <li class="nav-header-item">
               <a class="nav-header-link activ text-medium" href="./index.html">Studio</a>
@@ -58,7 +58,7 @@
       <section class="hero">
         <div class="container hero-offer">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="btn_hero" type="button">Order Service</button>
+          <button class="btn-hero" type="button">Order Service</button>
         </div>
       </section>
       <!-- Section 2 Our Preferences -->
@@ -90,7 +90,7 @@
               </div>
               <h3 class="title-thirdly-preferences">Diligence</h3>
               <p class="text-primary">
-                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                Research and confirm brands with the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
             <li class="preferences-item">
@@ -110,7 +110,7 @@
         <div class="container">
           <h2 class="title-secondary">Our Team</h2>
           <ul class="our-team-cart">
-            <li class="cart_team">
+            <li class="cart-team">
               <img
                 srcset="./images/mark-guerrero@2x.jpg 2x"
                 src="./images/mark-guerrero.jpg"
@@ -120,7 +120,7 @@
               />
               <div class="info-team">
                 <h3 class="title-thirdly">Mark Guerrero</h3>
-                <p class="text_primary">Product Designer</p>
+                <p class="text-primary">Product Designer</p>
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a class="social-link-link" href="#" target="_blank">
@@ -153,7 +153,7 @@
                 </ul>
               </div>
             </li>
-            <li class="cart_team">
+            <li class="cart-team">
               <img
                 srcset="./images/tom-ford@2x.jpg 2x"
                 src="./images/tom-ford.jpg"
@@ -163,7 +163,7 @@
               />
               <div class="info-team">
                 <h3 class="title-thirdly">Tom Ford</h3>
-                <p class="text_primary">Frontend Developer</p>
+                <p class="text-primary">Frontend Developer</p>
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a class="social-link-link" href="#" target="_blank">
@@ -196,7 +196,7 @@
                 </ul>
               </div>
             </li>
-            <li class="cart_team">
+            <li class="cart-team">
               <img
                 srcset="./images/camila-garcia@2x.jpg 2x"
                 src="./images/camila-garcia.jpg"
@@ -206,7 +206,7 @@
               />
               <div class="info-team">
                 <h3 class="title-thirdly">Camila Garcia</h3>
-                <p class="text_primary">Marketing</p>
+                <p class="text-primary">Marketing</p>
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a class="social-link-link" href="#" target="_blank">
@@ -239,7 +239,7 @@
                 </ul>
               </div>
             </li>
-            <li class="cart_team">
+            <li class="cart-team">
               <img
                 srcset="./images/daniel-wilson@2x.jpg 2x"
                 src="./images/daniel-wilson.jpg"
@@ -249,7 +249,7 @@
               />
               <div class="info-team">
                 <h3 class="title-thirdly">Daniel Wilson</h3>
-                <p class="text_primary">UI Designer</p>
+                <p class="text-primary">UI Designer</p>
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a class="social-link-link" href="#" target="_blank">
@@ -524,7 +524,7 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="text_medium hero-form-description">Leave your contacts and we will call you back</p>
+        <p class="text-medium hero-form-description">Leave your contacts and we will call you back</p>
         <!-- Form -->
         <form class="hero-form">
           <div class="hero-form-field-wrap">
@@ -653,5 +653,7 @@
         </div>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
+    <script src="./js/burger-menu.js"></script>
   </body>
 </html>
